--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-validator": "^3.0.2",
     "@types/morgan": "^1.9.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
@@ -29,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.8.3",
     "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0"
