--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/mohammednumaan/imagined-assignment#readme",
   "devDependencies": {
+    "@types/apicache": "^1.6.6",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-validator": "^3.0.2",
@@ -27,6 +29,8 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
+    "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
